<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextFieldCaption"
        android:text="@string/old_password_hint"/>

    <EditText
        android:id="@+id/oldPassword"
        style="@style/TextField"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:autofillHints="login"
        android:hint="@string/input_old_password"
        android:inputType="textPassword"
        android:gravity="center"
        android:paddingLeft="16dp"/>

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextFieldCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/new_password_hint" />

    <EditText
        android:id="@+id/newPassword"
        style="@style/TextField"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:autofillHints="password"
        android:hint="@string/input_new_password"
        android:inputType="textPassword"
        android:gravity="center"
        android:paddingLeft="16dp"/>

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextFieldCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/new_password_confirm_hint" />

    <EditText
        android:id="@+id/newPasswordConfirm"
        style="@style/TextField"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:autofillHints="password"
        android:hint="@string/new_password_confirm_hint"
        android:inputType="textPassword"
        android:gravity="center"
        android:paddingLeft="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="30dp"
        android:text="@string/button_save"
        android:gravity="center"/>


</LinearLayout>