<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="25dp">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextFieldCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_hint" />

    <EditText
        android:id="@+id/loginInput"
        style="@style/TextField"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:autofillHints="login"
        android:gravity="center"
        android:hint="@string/login_input_hint"
        android:inputType="text"
        android:paddingLeft="16dp" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextFieldCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password_hint" />

    <EditText
        android:id="@+id/passwordInput"
        style="@style/TextField"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:autofillHints="password"
        android:gravity="center"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingLeft="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/button_login" />

    <TextView
        android:id="@+id/not_account"
        style="@style/AdditionalAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        tools:text="Еще нет аккаунта?" />

    <TextView
        android:id="@+id/txtDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Демо-аккаунт"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:onClick="onClick"
        android:clickable="true"/>

</LinearLayout>